[tool.poetry]
name = "menu-rich"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
ruff = "^0.0.127"
pip-audit = "^2.4.5"
flake8 = "^5.0.4"
pydocstyle = "^6.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
