[tool.poetry]
name = "rich-menu"
version = "0.2.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "rich_menu"}]
classifiers = [  
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Code" = "https://github.com/gbPagano/rich_menu"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.4.5"
isort = "^5.10.1"
taskipy = "^1.12.2"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = { cmd = "isort . && ruff format .", help = "Formats the project source code" }
lint = { cmd = "ruff .", help = "Run the linter in the project source code" }
